# AI-Mock-Paper-Generator

./: README.md  app.py  pyproject.toml  requirements.txt  tools.py
agents/: paper_formatter_agent.py  question_generator_agent.py  syllabus_analyst_agent.py
generated_papers/: CDS_20251016_072200.md  CDS_20251016_072853.md  SSC_CGL_Tier_1_20251016_080130.md  SSC_CGL_Tier_1_20251016_080523.md
mcp_server/: exam_patterns.json  server.py
